@@ -1,5 +1,13 @@
 2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
 
+	* memmaps.c: save and restore the memmaps tree state. Also
+	port the dialog to GtkDialog
+
+	* procman.c: rename get_gconf_int_with_default to 
+	gconf_client_get_int_with_default
+
+2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
+
 	save and restore tree state
 
 	* procman.c: new functions to save and restore the tree state
